Implement ping-pong heartbeat to check for live connection
Websocket session is automatically reset if a ping response is not received in time.